# Substrate

./: .gitignore  .gitmodules  .swift-version  CMakeLists.txt  LICENSE.md  Package.swift  README.md  build.cmd  build_macos.sh  build_metal_macos.sh  build_windows.sh  swift-format-configuration.json
Sources/AppFramework/: CMakeLists.txt  ImGui+RGBAColour.swift  ImGuiTextureLookup.swift
Sources/AppFramework/Input/: CMakeLists.txt  ImGuiInputLayer.swift  InputLayer.swift  InputMapping.swift  InputSource.swift
Sources/AppFramework/UpdateScheduler/: CMakeLists.txt  ExternallyDrivenScheduler.swift  UpdateScheduler.swift
Sources/AppFramework/Windowing/: AppFrameworkNSApplication.swift  Application.swift  CMakeLists.txt  CocoaApplication.swift  CocoaInputManager.swift  CocoaWindow.swift  InputManager.swift  SDLApplication.swift  SDLGamepadManager.swift  SDLInputManager.swift  SDLWindow.swift  Screen.swift  Window+Imgui.swift  Window.swift  iOSApplication.swift  iOSWindow.swift
Sources/CNativeFileDialog/: CMakeLists.txt  nfd_cocoa.m  nfd_default.c  nfd_gtk.c  nfd_win.cpp
Sources/FrameGraph/: CMakeLists.txt
Sources/FrameGraph/FrameGraph/: ActiveResourceRange.swift  ArgumentBuffers.swift  ArgumentEncoder.swift  ArgumentEncoding.swift  CMakeLists.txt  CommandEncoders.swift  CommandRecorder.swift  DependencyTable.swift  DepthStencilDescriptor.swift  Enums.swift  FrameCompletion.swift  FrameGraph.swift  FrameGraphBlackboard.swift  FrameGraphJobManager.swift  GPUResourceUploader.swift  PipelineReflection.swift  Queue.swift  RefCountedResource.swift  RenderBackend.swift  RenderPipeline.swift  RenderTargetDescriptor.swift  ResourceDescriptors.swift  ResourceMap.swift  ResourceRegistries.swift  ResourceUsages.swift  Resources.swift  Sampler.swift  SubresourceMask.swift  TextureSubresourceMask.swift  TypedCommandRecorder.swift  VertexDescriptor.swift
Sources/FrameGraph/FrameGraphCExtras/: FrameGraphCExtras.c
Sources/FrameGraph/MetalBackend/: CMakeLists.txt  MTLArgumentEncoder+ArgumentBuffer.swift  MetalBackend.swift  MetalCaches.swift  MetalCommandBuffer.swift  MetalCommandEncoders.swift  MetalCommandQueue.swift  MetalConversion.swift  MetalDescriptors.swift  MetalFenceRegistry.swift  MetalFrameCommandInfo.swift  MetalFrameGraphBackend.swift  MetalHeapResourceAllocator.swift  MetalPersistentResourceAllocator.swift  MetalPipelineReflection.swift  MetalPoolResourceAllocator.swift  MetalRenderPipelineDescriptor.swift  MetalRenderTargetDescriptor.swift  MetalResourceAllocator.swift  MetalResourceBindingPath.swift  MetalResourceRegistry.swift  MetalTemporaryBufferAllocator.swift  OpenGLMetalInteropTexture.swift
Sources/FrameGraph/VulkanBackend/: CMakeLists.txt  VkRenderer.swift  Vulkan.swift  VulkanAccessFlags.swift  VulkanArgumentBuffer.swift  VulkanBackend.swift  VulkanBlitCommandEncoder.swift  VulkanBuffer.swift  VulkanCaches.swift  VulkanCommandBuffer.swift  VulkanCommandBufferResources.swift  VulkanCommandEncoder.swift  VulkanCommandPool.swift  VulkanComputeCommandEncoder.swift  VulkanConversion.swift  VulkanDescriptorPool.swift  VulkanDevice.swift  VulkanEnumDefinitions.swift  VulkanEventRegistry.swift  VulkanExtensions.swift  VulkanFrameGraph.swift  VulkanFrameGraphBackend.swift  VulkanFramebuffer.swift  VulkanImage.swift  VulkanInstance.swift  VulkanOptionSets.swift  VulkanPoolResourceAllocator.swift  VulkanRenderCommandEncoder.swift  VulkanRenderPass.swift  VulkanRenderTargetDescriptor.swift  VulkanResource.swift  VulkanResourceAllocator.swift  VulkanResourceBindingManager.swift  VulkanResourceBindingPath.swift  VulkanResourceRegistry.swift  VulkanShaderModule.swift  VulkanSwapChain.swift  VulkanSynchronisationPools.swift  VulkanTemporaryBufferAllocator.swift
Sources/FrameGraphUtilities/: Allocators.swift  ArrayBuffer.swift  BitPacking.swift  BitSet.swift  CMakeLists.txt  CachedValue.swift  ChunkArray.swift  Collection+BinarySearch.swift  DependencyTable.swift  EscapingPointer.swift  FrameGraphUtilities.swift  HashMap.swift  HashSet.swift  ReaderWriterLock.swift  References.swift  ResizingAllocator.swift  RoundInteger.swift  SpinLock.swift  TaggedHeap.swift
Sources/Substrate/: CMakeLists.txt  RenderDuration.swift  SubstrateUtilities.swift
Sources/Substrate/MetalBackend/: CMakeLists.txt  MTLArgumentEncoder+ArgumentBuffer.swift  MetalBackend.swift  MetalCaches.swift  MetalCommandBuffer.swift  MetalCommandEncoders.swift  MetalCommandQueue.swift  MetalConversion.swift  MetalDescriptors.swift  MetalFenceRegistry.swift  MetalHeapResourceAllocator.swift  MetalPipelineReflection.swift  MetalPoolResourceAllocator.swift  MetalRenderGraphBackend.swift  MetalRenderPipelineDescriptor.swift  MetalRenderTargetDescriptor.swift  MetalResourceAllocator.swift  MetalResourceBindingPath.swift  MetalResourcePurgeabilityManager.swift  MetalResourceRegistry.swift  MetalResources.swift  MetalSwapChain.swift  MetalTemporaryBufferAllocator.swift  OpenGLMetalInteropTexture.swift
Sources/SubstrateMath/: AffineMatrix.swift  AffineMatrix2D.swift  Angle.swift  CMakeLists.txt  Color.swift  Easing.swift  Exports.swift  Frustum.swift  Functions.swift  LICENCE.md  Matrix2x2.swift  Matrix3x3.swift  Matrix4x4+Extensions.swift  Matrix4x4.swift  NormalisedFloatConversion.swift  PackedVector3.swift  Packing.swift  Primitives.swift  Quaternion+Interpolation.swift  Quaternion.swift  Random.swift  RectTransform.swift  SimdVector.swift  SphericalHarmonics.swift  Splines.swift  Swizzle.swift  Utils.swift  Vector.swift  Vector3.swift
Sources/SubstrateUtilities/: Allocators.swift  ArrayBuffer.swift  AsyncSemaphore.swift  AutoGrowingArray.swift  BitPacking.swift  BitSet.swift  CMakeLists.txt  CachedValue.swift  ChunkArray.swift  Collection+BinarySearch.swift  Collection+OutOfBounds.swift  DeferredContinuation.swift  DependencyTable.swift  HashMap.swift  HashSet.swift  LinkedList.swift  Memory.swift  Range.swift  ReaderWriterLock.swift  ReasyncCompatibility.swift  RingBuffer.swift  RoundInteger.swift  Signposter.swift  SpinLock.swift  StaticArray.swift  TaggedHeap.swift  TaskStream.swift  Threading.swift
(+423 files in other folders)
